--- a/charts/nginx-gateway-fabric/templates/deployment.yaml
+++ b/charts/nginx-gateway-fabric/templates/deployment.yaml
@@ -165,6 +165,9 @@ spec:
         {{- with .Values.nginxGateway.extraVolumeMounts -}}
         {{ toYaml . | nindent 8 }}
         {{- end }}
+      {{- if .Values.nginxGateway.extraContainers }}
+      {{- toYaml .Values.nginxGateway.extraContainers | nindent 6 }}
+      {{- end }}              
       {{- if .Values.nginxGateway.topologySpreadConstraints }}
       topologySpreadConstraints:
         {{- toYaml .Values.nginxGateway.topologySpreadConstraints | nindent 8 }}
