--- a/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
+++ b/charts/nginx-gateway-fabric/templates/nginxproxy.yaml
@@ -26,6 +26,9 @@ spec:
         {{- if .Values.nginx.debug }}
         debug: {{ .Values.nginx.debug }}
         {{- end }}
+      {{- if .Values.nginxGateway.extraContainers }}
+      {{- toYaml .Values.nginxGateway.extraContainers | nindent 6 }}
+      {{- end }}
     {{- end }}
     {{- if eq .Values.nginx.kind "daemonSet" }}
     daemonSet:
@@ -42,6 +45,9 @@ spec:
         {{- if .Values.nginx.debug }}
         debug: {{ .Values.nginx.debug }}
         {{- end }}
+      {{- if .Values.nginxGateway.extraContainers }}
+      {{- toYaml .Values.nginxGateway.extraContainers | nindent 6 }}
+      {{- end }}
     {{- end }}
     {{- if .Values.nginx.service }}
     service:
