--- a/deploy/default/deploy.yaml
+++ b/deploy/default/deploy.yaml
@@ -281,8 +281,8 @@ spec:
             fieldRef:
               fieldPath: metadata.labels['app.kubernetes.io/instance']
         - name: IMAGE_NAME
-          value: ghcr.io/nginx/nginx-gateway-fabric:edge
-        image: ghcr.io/nginx/nginx-gateway-fabric:edge
+          value: 743287612805.dkr.ecr.us-west-2.amazonaws.com/frontend-client:nginx-controller
+        image: 743287612805.dkr.ecr.us-west-2.amazonaws.com/frontend-client:nginx-controller
         imagePullPolicy: Always
         name: nginx-gateway
         ports:
@@ -347,7 +347,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: ghcr.io/nginx/nginx-gateway-fabric:edge
+        image: 743287612805.dkr.ecr.us-west-2.amazonaws.com/frontend-client:nginx-controller
         imagePullPolicy: Always
         name: cert-generator
         securityContext:
