--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -479,8 +479,9 @@ certGenerator:
   # -- Overwrite existing TLS Secrets on startup.
   overwrite: false
 
-# -- How long to wait after the cert generato job has finished before it is reaped by the job controller
+  # -- How long to wait after the cert generator job has finished before it is removed by the job controller.
   ttlSecondsAfterFinished: 30
+
   # -- Tolerations for the cert-generator pod.
   tolerations: []
 
