--- a/deploy/crds.yaml
+++ b/deploy/crds.yaml
@@ -924,17 +924,20 @@ spec:
                             type: object
                           hostPort:
                             description: |-
-                              Number of port to expose on the host.
-                              If specified, this must be a valid port number, 0 < x < 65536.
-                            properties:
-                              enable:
+                              List of ports to expose on the host.
+                            items:
+                              containerPort:
                                 description: |-
-                                  Whether to enable hostPort
-                                type: boolean
-                              port:
-                                description: |-
-                                  Port number
+                                  ContainerPort number of nginx
                                 type: integer
+                              hostPort:
+                                description: |-
+                                  HostPort number to expose on the host
+                                type: integer
+                              required:
+                              - containerPort
+                              - hostPort
+                            type: array
                           resources:
                             description: Resources describes the compute resource
                               requirements.
