--- a/charts/nginx-gateway-fabric/values.yaml
+++ b/charts/nginx-gateway-fabric/values.yaml
@@ -398,18 +398,26 @@ nginx:
   # instance of NGINX Gateway Fabric.
   container:
 
+    # @schema
+    # type: array
+    # items:
+    #   type: object
+    #   properties:
+    #     containerPort:
+    #       type: integer
+    #       required: true
+    #       minimum: 1
+    #       maximum: 65535
+    #     hostPort:
+    #       type: integer
+    #       required: true
+    #       minimum: 1
+    #       maximum: 65535
+    # @schema
     # -- The hostPort configuration
-    hostPort:
-      # -- Enables hostPort.
-      enable: false
-
-      # @schema
-      # type: integer
-      # minimum: 1
-      # maximum: 65535
-      # @schema
-      # -- The port
-      port: 443
+    hostPorts: []
+    # - containerPort: 80
+    #   hostPort: 80
 
     # -- The resource requirements of the NGINX container.
     # resources: {}
